# LunaLuxEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  ClionCopyBuiltLibs.bat  CodingStyle.md  Game.cpp  Game.h  LunaLuxEngine.cbp  Makefile  Output-Debug.txt  README.md  TestGame  UWPWindow.h  __CMakeLists.txt  fragment.glsl  manualEngineLog.txt  notes.txt  shader.hlsl  temp.txt  test.cpp  vertex.glsl
CMakeScripts/: CoreLib.cmake  PhysicsLib.cmake
Code for later/: extra.txt
Code for later/DirectX11/: DirectX11Buffer.h  DirectX11Renderer.cpp  DirectX11Renderer.h.txt
Code for later/oldrender/: Buffer.cpp.txt  Buffer.h  Shader.cpp  Shader.h
Core_src/: LunaLuxEngineCore.cpp  LunaLuxEngineCore.h
Core_src/render/: DirectX.cpp  DirectX.h  IRender.h  OpenGL.cpp  Vulkan.cpp  Vulkan.h
Core_src/utils/: IGame.h
Core_src/window/: Window.cpp  Window.h
CrossEngineIncludes/: Common_Header.h
CrossEngineIncludes/GLM/: CMakeLists.txt
GLFW/: CMakeLists.txt
GLFW/src/: CMakeLists.txt  internal.h
Game_src/: Game.cpp
Includes/CrossWindow/: WindowAPI.h
Includes/GAA/: GAA.h
Includes/GLM/: common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
Includes/GLM/detail/: _noise.hpp  func_common.inl  func_exponential.inl  func_exponential_simd.inl  func_geometric.inl  func_geometric_simd.inl  func_integer_simd.inl  func_matrix.inl  func_packing.inl  glm.cpp  setup.hpp  type_mat2x2.inl  type_mat3x3.inl  type_mat4x4.inl  type_quat.hpp  type_quat.inl
Includes/GLM/ext/: matrix_clip_space.hpp  matrix_common.hpp  matrix_common.inl  matrix_double2x2.hpp  matrix_double2x2_precision.hpp  matrix_double2x3.hpp  matrix_double2x3_precision.hpp  matrix_double2x4.hpp  matrix_double2x4_precision.hpp  matrix_double3x2.hpp  matrix_double3x2_precision.hpp  matrix_double3x3.hpp  matrix_double3x3_precision.hpp  matrix_double3x4.hpp  matrix_double3x4_precision.hpp  matrix_double4x2.hpp  matrix_double4x2_precision.hpp  matrix_double4x3.hpp  matrix_double4x3_precision.hpp  matrix_double4x4.hpp  matrix_double4x4_precision.hpp  matrix_float2x2.hpp  matrix_float2x2_precision.hpp  matrix_float2x3.hpp  matrix_float2x3_precision.hpp  matrix_float2x4.hpp  matrix_float2x4_precision.hpp  matrix_float3x2.hpp  matrix_float3x2_precision.hpp  matrix_float3x3.hpp  matrix_float3x3_precision.hpp  matrix_float3x4.hpp  matrix_float3x4_precision.hpp  matrix_float4x2.hpp  matrix_float4x2_precision.hpp  matrix_float4x3.hpp  matrix_float4x3_precision.hpp  matrix_float4x4.hpp  matrix_float4x4_precision.hpp  matrix_projection.hpp  (+68 more)
Includes/GLM/gtc/: bitfield.hpp  bitfield.inl  color_space.hpp  constants.hpp  epsilon.hpp  ulp.hpp  (+22 more)
Includes/LLESDK/: Common_Header.h  Engine.h  IGame.h  Input.h  Physics.h  types.h
Includes/LunaLux/: DirectX12Lib.h  KeyMap.h  NetLib.h  VulkanLib.h  VulkanUtilLib.h  WindowLib.h
Includes/glad/: glad.h
Libs/: CMakeLists.txt  LunaLuxVulkanLib.lib  LunaLuxVulkanLib_Release.lib  LunaLuxVulkanUtilLib.lib  LunaLuxWindowLib.lib  LunaLuxWindowLib_Debug.lib
Libs/DirectX12Lib/: CMakeLists.txt
Libs/NetLib/: CMakeLists.txt  ClientTest.cpp  ServerTest.cpp
Libs/NetLib/src/: ClientSocketManager.hpp  Definds.h  NetLib.cpp  StringUtil.cpp  StringUtil.h
Libs/NetLib/src/Api/: NetLib.h
Libs/NetLib/src/linux/: LinuxNetManager.hpp
Libs/NetLib/src/windows/: WindowsNetManger.hpp
Libs/VulkanLib/: CMakeLists.txt
Libs/VulkanLib/meta/: debug_macros.cmake
Libs/VulkanLib/src/: Debug.h  Debug.h.in  VulkanLib.cpp
Libs/VulkanLib/src/API/: VulkanLib.h
Libs/VulkanLib/src/Componants/: Device.cpp  Device.hpp  Surface.hpp  SwapChain.hpp  Validator.cpp  Validator.h
Libs/VulkanUtilLib/: CMakeLists.txt
Libs/VulkanUtilLib/meta/: debug_macros.cmake
Libs/VulkanUtilLib/src/: Debug.h  Debug.h.in
Libs/VulkanUtilLib/src/API/: VulkanUtilLib.h
Libs/VulkanUtilLib/src/Catagory/: Creators.cpp  Destroyers.cpp  Other.cpp  StructCreation.cpp
Libs/VulkanUtilLib/test/: Main.cpp  linmath.hpp
Libs/WindowLib/: CMakeLists.txt
Libs/WindowLib/src/: IO.hpp  Window.cpp  Window.h  WindowLib.cpp
Libs/WindowLib/src/API/: KeyMap.h  WindowLib.h
Libs/WindowLib/src/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
Libs/WindowLib/src/linux/: linuxWindows.hpp
Physics_src/: LunaLuxEnginePhysics.h
assets/: shader.hlsl
libs/: Glad.lib  LunaLuxEngine_GAA_Lib.lib
referance/: Ref1.cpp  gettime.h  networking help.html
referance/networking help_files/: css.css
src/: Common_Header.h  Debug.h  EngineError.cpp  EngineError.h  LunaLuxEngine.cpp  LunaLuxEngine.h  Test.cpp  types.h
src/Core_src/: LunaLuxEngineCore.cpp  LunaLuxEngineCore.h  main.cpp
src/CrossWindow_src/: IWindow.h  Input.h  Thread.cpp  Thread.h  Win32Window.cpp  Win32Window.h  Window.cpp  Window.h  WindowPanic.cpp  WindowPanic.h  X11Window.cpp  X11Window.h  XInput.cpp
src/EntitySystem/: Component.h  Entity.h
src/GAA_src/: GAA.cpp  GAA.hpp  Platform.h
src/Game_src/: Game.cpp  Game.h  main.cpp  test.cpp
src/Glad/: Game.h  glad.c
src/Network/: NetworkManager.cpp  NetworkManager.h
src/Physics_src/: LunaLuxEnginePhysics.cpp  LunaLuxEnginePhysics.h
src/Renderer/: IRenderable.h  IRenderer.h  Material.h  RenderManager.cpp  RenderManager.h
src/common/: Entity.cpp  Entity.h
src/render/: DirectX.cpp  IRender.h  OpenGL.cpp
src/utils/: BinaryTree.hpp  EngineDefines.h  IGame.h  StringUtils.cpp  StringUtils.h  TimeTracker.hpp
src/window/: Window.cpp  Window.h  X11Interface.cpp  X11Interface.h
(+244 files in other folders)
